--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@nuxtjs/axios": "^5.12.5",
     "axios": "^0.21.1",
     "core-js": "^3.8.3",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "fs": "^0.0.1-security",
     "node-audiorecorder": "^2.2.0",
